--- a/package.json
+++ b/package.json
@@ -49,5 +49,6 @@
       "last 1 safari version"
     ]
   },
-  "packageManager": "yarn@3.5.0"
+  "packageManager": "yarn@3.5.0",
+  "homepage": "https://jhyoon97.github.io/data-structures-and-algorithms/"
 }
