--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "eslint-plugin-jsx-a11y": "^6.5.1",
     "eslint-plugin-react": "^7.28.0",
     "eslint-plugin-react-hooks": "^4.3.0",
+    "gh-pages": "^6.1.0",
     "prettier": "^2.8.7",
     "react-app-rewired": "^2.2.1",
     "typescript": "^4.9.5"
@@ -35,7 +36,9 @@
   "scripts": {
     "start": "react-app-rewired start",
     "build": "react-app-rewired build",
-    "test": "react-app-rewired test"
+    "test": "react-app-rewired test",
+    "predeploy": "react-app-rewired build",
+    "deploy": "gh-pages -d build"
   },
   "browserslist": {
     "production": [
