CollisionHashTable: 충돌이 잘 일어나는 해시테이블

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -68,6 +68,7 @@
     // 여러 클래스 한 파일에 허용
     "max-classes-per-file": "off",
     "no-plusplus": "off",
-    "no-console": "off"
+    "no-console": "off",
+    "class-methods-use-this": "off"
   }
 }
