--- a/package.json
+++ b/package.json
@@ -1,22 +1,16 @@
 {
-  "name": "react-spa-boilerplate",
+  "name": "ts-playground",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@emotion/react": "^11.10.6",
-    "dayjs": "^1.11.7",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.10.0",
     "react-scripts": "5.0.1"
   },
   "devDependencies": {
-    "@babel/plugin-transform-react-jsx": "^7.21.0",
-    "@emotion/babel-plugin-jsx-pragmatic": "^0.2.0",
     "@types/node": "^16.18.23",
     "@types/react": "^18.0.33",
     "@types/react-dom": "^18.0.11",
-    "@types/react-router-dom": "^5.3.3",
     "@typescript-eslint/eslint-plugin": "^5.13.0",
     "@typescript-eslint/parser": "^5.0.0",
     "customize-cra": "^1.0.0",
@@ -28,17 +22,11 @@
     "eslint-plugin-jsx-a11y": "^6.5.1",
     "eslint-plugin-react": "^7.28.0",
     "eslint-plugin-react-hooks": "^4.3.0",
-    "gh-pages": "^6.1.0",
     "prettier": "^2.8.7",
-    "react-app-rewired": "^2.2.1",
     "typescript": "^4.9.5"
   },
   "scripts": {
-    "start": "react-app-rewired start",
-    "build": "react-app-rewired build",
-    "test": "react-app-rewired test",
-    "predeploy": "react-app-rewired build",
-    "deploy": "gh-pages -d build"
+    "start": "react-scripts start"
   },
   "browserslist": {
     "production": [
@@ -51,6 +39,5 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "homepage": "https://jhyoon97.github.io/data-structures-and-algorithms/"
+  }
 }
