--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -13,61 +13,6 @@
   },
   "parser": "@typescript-eslint/parser",
   "plugins": ["@typescript-eslint"],
-  "extends": [
-    "eslint:recommended",
-    "plugin:@typescript-eslint/recommended",
-    "airbnb",
-    "airbnb-typescript",
-    "plugin:react/jsx-runtime",
-    "prettier"
-  ],
-  "rules": {
-    // 컴포넌트 파일은 tsx 확장자로만 작성
-    "react/jsx-filename-extension": ["error", { "extensions": [".tsx"] }],
-    // 객체 프로퍼티 재정의 가능하도록 (개발자 재량이지만 상태값 직접 조작은 금지할 것)
-    "no-param-reassign": "off",
-    // 함수 컴포넌트 화살표 함수로 통일
-    "react/function-component-definition": [
-      "error",
-      {
-        "namedComponents": "arrow-function"
-      }
-    ],
-    // @typescript-eslint/no-unused-vars와 겹침
-    "no-unused-vars": "off",
-    // 사용하지 않는 변수는 경고처리, 함수의 매개변수는 검사 안하도록
-    "@typescript-eslint/no-unused-vars": [
-      "warn",
-      {
-        "vars": "local",
-        "args": "none"
-      }
-    ],
-    // 비export가 한개일 때 export default를 강제하지 않도록 설정
-    "import/prefer-default-export": "off",
-    // styled-reset import 문제
-    "import/no-extraneous-dependencies": "off",
-    // prettier는 자동 저장으로 포맷팅 역할만 맡김
-    "prettier/prettier": "off",
-    // props에 spread 연산 허용
-    "react/jsx-props-no-spreading": "off",
-    // Typescript any 허용 (any는 지양)
-    "@typescript-eslint/no-explicit-any": "off",
-    // Fragment 허용
-    "react/jsx-no-useless-fragment": "off",
-    // 반복분 내에서 await 허용
-    "no-await-in-loop": "off",
-    // 객체 또는 배열 직접 할당 허용
-    "prefer-destructuring": "off",
-    // defaultProps 사용 안함
-    "react/require-default-props": "off",
-    // 함수 내에서 바로 리턴하는 경우에 괄호 검사 끄기
-    "arrow-body-style": "off",
-    // 여러 클래스 한 파일에 허용
-    "max-classes-per-file": "off",
-    "no-plusplus": "off",
-    "no-console": "off",
-    "class-methods-use-this": "off",
-    "react/no-array-index-key": "off"
-  }
+  "extends": [],
+  "rules": {}
 }
