--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "eslint-plugin-react": "^7.28.0",
     "eslint-plugin-react-hooks": "^4.3.0",
     "prettier": "^2.8.7",
+    "sass": "^1.90.0",
     "typescript": "^4.9.5"
   },
   "scripts": {
